--- a/README.mkd
+++ b/README.mkd
@@ -1,18 +1,18 @@
-Release Notes - SABnzbd 2.3.5 RC 2
+Release Notes - SABnzbd 2.3.5
 =========================================================
-
-## Bug fixes since 2.3.5 RC 1
-- Overall improvements in stability and reliability
 
 ## Bug fixes since 2.3.4
 - Reworked Deobfuscate.py script for much faster renaming
 - All scripts can now receive input through environment variables
 - Unable to set only one Indexer Category per category
 - Could falsely report not enough blocks are available for repair
+- Failures in un-(7)zip or file-joining would not fail the job
 - Direct Unpack could abort unnecessarily
 - Rare crash during file assembly
 - Server hostname is now used in warnings and logs
 - Improved disk performance measurement
+- Overall improvements in stability and reliability
+- Windows: MultiPar repair of joinable files could fail
 - Windows: Tray icon also shows remaining size when paused
 - Windows: Wizard would not default to installer language
 - Windows: Update MultiPar to 1.3.0.1
