--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,11 @@
-Release Notes - SABnzbd 2.3.6 Beta 1
+Release Notes - SABnzbd 2.3.6 RC 1
 =========================================================
+
+## Improvements and bug fixes since 2.3.6 Beta 1
+- New option require_modern_tls forces TLSv1.2 for SSL-connections
+- Unavailable feeds could crash RSS-readout
+- Linux: Correct supported file extensions of tray icon
+- Windows: Update MultiPar to 1.3.0.2
 
 ## Improvements and bug fixes since 2.3.5
 - RSS source icon on all tabs of feed overview
@@ -9,13 +15,13 @@ Release Notes - SABnzbd 2.3.6 Beta 1
 - Added API-call to modify RSS-filters
 - Exceeding disk space could result in endless retry-loop
 - History Retry All would not retry failed NZB URL-fetches
-- API-call of Retry could result in an error
+- API-call to Retry a job could result in an error
 - Assume correct SSL/certificate setup if test-host was disabled
 - Better logging of par2-file creator
 - Windows and macOS: Update UnRar to 5.61
 
-Looking for help with SABnzbd (Python 3) development:
-https://www.reddit.com/r/usenet/918nxv/
+Still looking for help with SABnzbd (Python 3) development!
+https://www.reddit.com/r/usenet/comments/918nxv/
 
 ## Upgrading from 2.2.x and older
 - Finish queue
