--- a/README.mkd
+++ b/README.mkd
@@ -2,7 +2,7 @@ Release Notes - SABnzbd 2.3.6 RC 1
 =========================================================
 
 ## Improvements and bug fixes since 2.3.6 Beta 1
-- New option require_modern_tls forces TLSv1.2 for SSL-connections
+- New option require_modern_tls forces TLSv1.2+ for SSL-connections
 - Unavailable feeds could crash RSS-readout
 - Linux: Correct supported file extensions of tray icon
 - Windows: Update MultiPar to 1.3.0.2
