--- a/README.mkd
+++ b/README.mkd
@@ -1,13 +1,8 @@
-Release Notes - SABnzbd 2.3.6 RC 1
+Release Notes - SABnzbd 2.3.6
 =========================================================
 
-## Improvements and bug fixes since 2.3.6 Beta 1
-- New option require_modern_tls forces TLSv1.2+ for SSL-connections
-- Unavailable feeds could crash RSS-readout
-- Linux: Correct supported file extensions of tray icon
-- Windows: Update MultiPar to 1.3.0.2
-
 ## Improvements and bug fixes since 2.3.5
+- New option require_modern_tls forces TLSv1.2+ for SSL-connections
 - RSS source icon on all tabs of feed overview
 - RSS source icon now links to feed details page (if available)
 - RSS feed URL's with commas would be wrongly escaped
@@ -15,9 +10,11 @@ Release Notes - SABnzbd 2.3.6 RC 1
 - Added API-call to modify RSS-filters
 - Exceeding disk space could result in endless retry-loop
 - History Retry All would not retry failed NZB URL-fetches
-- API-call to Retry a job could result in an error
+- API-call to retry a job could result in unexpected error
 - Assume correct SSL/certificate setup if test-host was disabled
-- Better logging of par2-file creator
+- The par2-file creator was logged incorrectly
+- Linux: Correct supported file extensions of tray icon
+- Windows: Update MultiPar to 1.3.0.2
 - Windows and macOS: Update UnRar to 5.61
 
 Still looking for help with SABnzbd (Python 3) development!
