--- a/README.mkd
+++ b/README.mkd
@@ -1,21 +1,11 @@
-Release Notes - SABnzbd 2.3.6
+Release Notes - SABnzbd 2.3.7 Beta 1
 =========================================================
 
-## Improvements and bug fixes since 2.3.5
-- New option require_modern_tls forces TLSv1.2+ for SSL-connections
-- RSS source icon on all tabs of feed overview
-- RSS source icon now links to feed details page (if available)
-- RSS feed URL's with commas would be wrongly escaped
-- Common RSS login problems will show more appropriate error
-- Added API-call to modify RSS-filters
-- Exceeding disk space could result in endless retry-loop
-- History Retry All would not retry failed NZB URL-fetches
-- API-call to retry a job could result in unexpected error
-- Assume correct SSL/certificate setup if test-host was disabled
-- The par2-file creator was logged incorrectly
-- Linux: Correct supported file extensions of tray icon
-- Windows: Update MultiPar to 1.3.0.2
-- Windows and macOS: Update UnRar to 5.61
+## Improvements and bug fixes since 2.3.6
+- Hopeless jobs will be failed faster, based on the first article of
+  each file. If 80% of these first articles is missing, the job is aborted.
+- Option "fast_fail" added to disable the new behavior.
+- Readout of some RSS feeds could result in a crash
 
 Still looking for help with SABnzbd (Python 3) development!
 https://www.reddit.com/r/usenet/comments/918nxv/
