--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,11 @@
-Release Notes - SABnzbd 2.3.7 Beta 1
+Release Notes - SABnzbd 2.3.7 RC 1
 =========================================================
+
+## Improvements and bug fixes since 2.3.7 Beta 1
+- Added option to quickly add a verified test download
+- Direct Unpack could get stuck processing
+- Show Details on Servers page could break graph display
+- Windows: Update MultiPar to 1.3.0.3
 
 ## Improvements and bug fixes since 2.3.6
 - Hopeless jobs will be failed faster, based on the first article of
