--- a/README.mkd
+++ b/README.mkd
@@ -1,18 +1,12 @@
-Release Notes - SABnzbd 2.3.7
+Release Notes - SABnzbd 2.3.8 Beta 1
 =========================================================
 
-## Improvements and bug fixes since 2.3.6
-- Hopeless jobs will be failed faster, based on the first article of
-  each file. If 80% of these first articles is missing, the job is aborted.
-- Option "fast_fail" added to disable the new behavior.
-- Added option to quickly add a verified test download
-- Readout of some RSS feeds could result in a crash
-- Direct Unpack could get stuck processing
-- Show Details on Servers page could break graph display
-- Windows: Update MultiPar to 1.3.0.3
-
-Still looking for help with SABnzbd (Python 3) development!
-https://www.reddit.com/r/usenet/comments/918nxv/
+## Improvements and bug fixes since 2.3.7
+- Changes to newsserver configuration could be delayed
+- Filnames would not be sanitized when using "Make Windows compatible"
+- Sorting could fail on root-folders
+- 7z-files were not listed as supported NZB archives
+- Windows: update 7zip to 18.06
 
 ## Upgrading from 2.2.x and older
 - Finish queue
