Update text files for 2.3.8

--- a/README.mkd
+++ b/README.mkd
@@ -1,18 +1,16 @@
-Release Notes - SABnzbd 2.3.8 RC 1
+Release Notes - SABnzbd 2.3.8
 =========================================================
-
-## Improvements and bug fixes since 2.3.8 Beta 1
-- SSL cipher settings were ignored during server test
-- Windows: update 7zip to 19.00
-- Windows: update MultiPar to v1.3.0.4
-- Windows and macOS: update Python to 2.7.16
-- Windows and macOS: update UnRar to 5.70
 
 ## Improvements and bug fixes since 2.3.7
 - Changes to newsserver configuration could be delayed
 - Filenames would not be sanitized when using "Make Windows compatible"
 - Sorting could fail on root-folders
 - 7z-files were not listed as supported NZB archives
+- SSL cipher settings were ignored during server test
+- Windows: update 7zip to 19.00
+- Windows: update MultiPar to v1.3.0.4
+- Windows and macOS: update Python to 2.7.16
+- Windows and macOS: update UnRar to 5.70
 
 ## Upgrading from 2.2.x and older
 - Finish queue
