--- a/po/main/SABnzbd.pot
+++ b/po/main/SABnzbd.pot
@@ -5,14 +5,14 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: SABnzbd-2.4.0-develop\n"
+"Project-Id-Version: SABnzbd-2.3.8\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: shypike@sabnzbd.org\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 7bit\n"
-"POT-Creation-Date: 2019-01-04 12:49+W. Europe Standard Time\n"
+"POT-Creation-Date: 2019-05-07 09:00+W. Europe Daylight Time\n"
 "Generated-By: pygettext.py 1.5\n"
 
 
@@ -410,10 +410,6 @@ msgstr ""
 
 #: sabnzbd/directunpacker.py # sabnzbd/newsunpack.py
 msgid "Unpacked %s files/folders in %s"
-msgstr ""
-
-#: sabnzbd/directunpacker.py [Warning message]
-msgid "Unable to stop the unrar process."
 msgstr ""
 
 #: sabnzbd/directunpacker.py [Warning message]
@@ -3275,19 +3271,19 @@ msgid "Comma separated list"
 msgstr ""
 
 #: sabnzbd/skintext.py
-msgid "Server load-balancing"
+msgid "Server IP address selection"
 msgstr ""
 
 #: sabnzbd/skintext.py
-msgid "Prevent load-balancing"
+msgid "First IP address"
 msgstr ""
 
 #: sabnzbd/skintext.py
-msgid "Allow load-balancing"
+msgid "Randomly selected IP address"
 msgstr ""
 
 #: sabnzbd/skintext.py
-msgid "Allow load-balancing with optimization for IPv6"
+msgid "Quickest IP address, preferring IPv6"
 msgstr ""
 
 #: sabnzbd/skintext.py
@@ -4152,10 +4148,6 @@ msgstr ""
 
 #: sabnzbd/skintext.py
 msgid "Optionally specify a filename"
-msgstr ""
-
-#: sabnzbd/skintext.py
-msgid "Formats: .nzb, .rar, .zip, .gz, .bz2"
 msgstr ""
 
 #: sabnzbd/skintext.py
