--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 3.0.0 Beta 1
+Release Notes - SABnzbd 3.0.0 Beta 2
 =========================================================
 
 ## About this new version
@@ -6,6 +6,14 @@ We have been working for months to upgrade the SABnzbd code from Python 2 to Pyt
 Although it might not sound like a big change, we had to rewrite almost every part of
 the code. This also means that we might have introduced new bugs. We therefore encourage
 you to let us know of any errors or strange behavior you might notice!
+
+## Changes and bugfixes since 3.0.0 Beta 1
+- Articles failing with CRC errors are now retried on other servers.
+- Linux: special permission bits are removed from files after download.
+- Add hover color for queue and history in Glitter Night.
+- Improvements to built-in internet bandwidth test.
+- Adding new NZB's could fail.
+- Some API-calls could result in errors.
 
 ## Big changes in 3.0.0
 - Python 3.5 and above are the only supported versions of Python.
