--- a/po/nsis/es.po
+++ b/po/nsis/es.po
@@ -1,21 +1,21 @@
-# Spanish translation for sabnzbd
-# Copyright (c) 2011 Rosetta Contributors and Canonical Ltd 2011
-# This file is distributed under the same license as the sabnzbd package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
-#
+# SABnzbd Translation Template file NSIS
+# Copyright 2011-2020 The SABnzbd-Team
+#   team@sabnzbd.org
+# 
+# Translators:
+# Safihre SABnzbd <safihre@sabnzbd.org>, 2020
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: sabnzbd\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2020-05-07 19:13+0000\n"
-"PO-Revision-Date: 2013-05-05 14:50+0000\n"
-"Last-Translator: Victor Herrero <victorhera@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"Project-Id-Version: SABnzbd-3.0.0-develop\n"
+"PO-Revision-Date: 2020-06-27 15:56+0000\n"
+"Last-Translator: Safihre SABnzbd <safihre@sabnzbd.org>, 2020\n"
+"Language-Team: Spanish (https://www.transifex.com/sabnzbd/teams/111101/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2020-05-08 04:51+0000\n"
-"X-Generator: Launchpad (build fbdff7602bd10fb883bf7e2ddcc7fd5a16f60398)\n"
+"Content-Transfer-Encoding: 7bit\n"
+"Language: es\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: NSIS_Installer.nsi
 msgid "Show Release Notes"
@@ -77,30 +77,3 @@ msgstr ""
 #: NSIS_Installer.nsi
 msgid "Your settings and data will be preserved."
 msgstr "Tus ajustes y datos se mantendrán intactos."
-
-#~ msgid "Download error, retry?"
-#~ msgstr "Error en la descarga, ¿probamos de nuevo?"
-
-#~ msgid ""
-#~ "This system requires the Microsoft runtime library VC90 to be installed "
-#~ "first. Do you want to do that now?"
-#~ msgstr ""
-#~ "Este sistema requiere la ejecución de la biblioteca Microsoft runtime VC90 "
-#~ "que debe ser instalada. ¿Quieres hacerlo ahora?"
-
-#~ msgid "Cannot install without runtime library, retry?"
-#~ msgstr ""
-#~ "No se puede instalar sin la biblioteca runtime, ¿Lo volvemos a intentar?"
-
-#~ msgid "Downloading Microsoft runtime installer..."
-#~ msgstr "Descargando el instalador de Microsoft runtime..."
-
-#~ msgid "Go to the SABnzbd Wiki"
-#~ msgstr "Ir al wiki de SABnzbd"
-
-#~ msgid ""
-#~ "                  >>>> WARNING <<<<\\r\\n\\r\\nPlease, first check the "
-#~ "release notes or go to http://wiki.sabnzbd.org/introducing-0-7-0 !"
-#~ msgstr ""
-#~ "                  >>>> ATENCION <<<<\\r\\n\\r\\nPor favor, compruebe las "
-#~ "notas de version o visite http://wiki.sabnzbd.org/introducing-0-7-0 !"
