--- a/po/nsis/fr.po
+++ b/po/nsis/fr.po
@@ -1,21 +1,21 @@
-# French translation for sabnzbd
-# Copyright (c) 2011 Rosetta Contributors and Canonical Ltd 2011
-# This file is distributed under the same license as the sabnzbd package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
-#
+# SABnzbd Translation Template file NSIS
+# Copyright 2011-2020 The SABnzbd-Team
+#   team@sabnzbd.org
+# 
+# Translators:
+# Safihre SABnzbd <safihre@sabnzbd.org>, 2020
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: sabnzbd\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2020-05-07 19:13+0000\n"
-"PO-Revision-Date: 2020-05-07 20:22+0000\n"
-"Last-Translator: Fred <88com88@gmail.com>\n"
-"Language-Team: French <fr@li.org>\n"
+"Project-Id-Version: SABnzbd-3.0.0-develop\n"
+"PO-Revision-Date: 2020-06-27 15:56+0000\n"
+"Last-Translator: Safihre SABnzbd <safihre@sabnzbd.org>, 2020\n"
+"Language-Team: French (https://www.transifex.com/sabnzbd/teams/111101/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2020-05-08 04:51+0000\n"
-"X-Generator: Launchpad (build fbdff7602bd10fb883bf7e2ddcc7fd5a16f60398)\n"
+"Content-Transfer-Encoding: 7bit\n"
+"Language: fr\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: NSIS_Installer.nsi
 msgid "Show Release Notes"
@@ -35,8 +35,8 @@ msgid ""
 "reinstall the SABnzbd service. \\n\\nClick `OK` to remove the existing "
 "services or `Cancel` to cancel this upgrade."
 msgstr ""
-"Le service Windows SABnzbd a changé dans SABnzbd 3.0.0. \\nVous allez devoir "
-"réinstaller le service SABnzbd. \\n\\nCliquez sur 'OK' pour supprimer les "
+"Le service Windows SABnzbd a changé dans SABnzbd 3.0.0. \\nVous allez devoir"
+" réinstaller le service SABnzbd. \\n\\nCliquez sur 'OK' pour supprimer les "
 "services existants ou sur 'Annuler' pour annuler cette mise à niveau."
 
 #: NSIS_Installer.nsi
@@ -44,8 +44,8 @@ msgid ""
 "The installer only supports 64-bit Windows, use the standalone version to "
 "run on 32-bit Windows."
 msgstr ""
-"Le programme d'installation ne prend en charge que Windows 64 bits, utilisez "
-"la version standalone pour l'exécuter sur Windows 32 bits."
+"Le programme d'installation ne prend en charge que Windows 64 bits, utilisez"
+" la version standalone pour l'exécuter sur Windows 32 bits."
 
 #: NSIS_Installer.nsi
 msgid "This will uninstall SABnzbd from your system"
@@ -83,30 +83,3 @@ msgstr ""
 #: NSIS_Installer.nsi
 msgid "Your settings and data will be preserved."
 msgstr "Vos paramètres et données seront conservés."
-
-#~ msgid ""
-#~ "This system requires the Microsoft runtime library VC90 to be installed "
-#~ "first. Do you want to do that now?"
-#~ msgstr ""
-#~ "Ce système nécessite que la bibliothèque d'exécution Microsoft vc90 soit "
-#~ "installée en premier. Voulez-vous le faire maintenant?"
-
-#~ msgid ""
-#~ "                  >>>> WARNING <<<<\\r\\n\\r\\nPlease, first check the "
-#~ "release notes or go to http://wiki.sabnzbd.org/introducing-0-7-0 !"
-#~ msgstr ""
-#~ "                  >>>> AVERTISSEMENT <<<<\\r\\n\\r\\nS'il vous plaît, "
-#~ "vérifiez d'abord les notes de version ou consultez "
-#~ "http://wiki.sabnzbd.org/introducing-0-7-0 !"
-
-#~ msgid "Go to the SABnzbd Wiki"
-#~ msgstr "Aller sur le Wiki de SABnzbd"
-
-#~ msgid "Download error, retry?"
-#~ msgstr "Erreur de téléchargement, réessayer ?"
-
-#~ msgid "Cannot install without runtime library, retry?"
-#~ msgstr "Impossible d'installer sans moteur d'exécution, réessayer?"
-
-#~ msgid "Downloading Microsoft runtime installer..."
-#~ msgstr "Téléchargement de Microsoft runtime installer..."
