--- a/po/nsis/ru.po
+++ b/po/nsis/ru.po
@@ -1,21 +1,21 @@
-# Russian translation for sabnzbd
-# Copyright (c) 2011 Rosetta Contributors and Canonical Ltd 2011
-# This file is distributed under the same license as the sabnzbd package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
-#
+# SABnzbd Translation Template file NSIS
+# Copyright 2011-2020 The SABnzbd-Team
+#   team@sabnzbd.org
+# 
+# Translators:
+# Safihre SABnzbd <safihre@sabnzbd.org>, 2020
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: sabnzbd\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2020-05-07 19:13+0000\n"
-"PO-Revision-Date: 2013-05-05 14:50+0000\n"
-"Last-Translator: Pavel Maryanov <Unknown>\n"
-"Language-Team: Russian <gnu@mx.ru>\n"
+"Project-Id-Version: SABnzbd-3.0.0-develop\n"
+"PO-Revision-Date: 2020-06-27 15:56+0000\n"
+"Last-Translator: Safihre SABnzbd <safihre@sabnzbd.org>, 2020\n"
+"Language-Team: Russian (https://www.transifex.com/sabnzbd/teams/111101/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2020-05-08 04:51+0000\n"
-"X-Generator: Launchpad (build fbdff7602bd10fb883bf7e2ddcc7fd5a16f60398)\n"
+"Content-Transfer-Encoding: 7bit\n"
+"Language: ru\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: NSIS_Installer.nsi
 msgid "Show Release Notes"
@@ -78,21 +78,3 @@ msgstr ""
 #: NSIS_Installer.nsi
 msgid "Your settings and data will be preserved."
 msgstr "Ваши параметры и данные будут сохранены."
-
-#~ msgid ""
-#~ "This system requires the Microsoft runtime library VC90 to be installed "
-#~ "first. Do you want to do that now?"
-#~ msgstr ""
-#~ "Для этой системы сначала необходимо установить библиотеку времени выполнения "
-#~ "Microsoft VC90. Сделать это сейчас?"
-
-#~ msgid "Downloading Microsoft runtime installer..."
-#~ msgstr "Загрузка программы установки Microsoft..."
-
-#~ msgid "Download error, retry?"
-#~ msgstr "Ошибка загрузки. Повторить попытку?"
-
-#~ msgid "Cannot install without runtime library, retry?"
-#~ msgstr ""
-#~ "Не удаётся выполнить установку без библиотеки времени выполнения. Повторить "
-#~ "попытку?"
