--- a/po/nsis/sr.po
+++ b/po/nsis/sr.po
@@ -1,22 +1,21 @@
-# Serbian translation for sabnzbd
-# Copyright (c) 2011 Rosetta Contributors and Canonical Ltd 2011
-# This file is distributed under the same license as the sabnzbd package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
-# Мирослав Николић <miroslavnikolic@rocketmail.com>, 2011.
+# SABnzbd Translation Template file NSIS
+# Copyright 2011-2020 The SABnzbd-Team
+#   team@sabnzbd.org
+# 
+# Translators:
+# Safihre SABnzbd <safihre@sabnzbd.org>, 2020
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: sabnzbd\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2020-05-07 19:13+0000\n"
-"PO-Revision-Date: 2013-05-05 14:50+0000\n"
-"Last-Translator: Ozzii <Unknown>\n"
-"Language-Team: Launchpad Serbian Translators\n"
+"Project-Id-Version: SABnzbd-3.0.0-develop\n"
+"PO-Revision-Date: 2020-06-27 15:56+0000\n"
+"Last-Translator: Safihre SABnzbd <safihre@sabnzbd.org>, 2020\n"
+"Language-Team: Serbian (https://www.transifex.com/sabnzbd/teams/111101/sr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2020-05-08 04:51+0000\n"
-"X-Generator: Launchpad (build fbdff7602bd10fb883bf7e2ddcc7fd5a16f60398)\n"
+"Content-Transfer-Encoding: 7bit\n"
 "Language: sr\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: NSIS_Installer.nsi
 msgid "Show Release Notes"
@@ -78,29 +77,3 @@ msgstr ""
 #: NSIS_Installer.nsi
 msgid "Your settings and data will be preserved."
 msgstr "Ваша подешавања и подаци биће сачувани."
-
-#~ msgid "Download error, retry?"
-#~ msgstr "Грешка у преузимању, да поновим?"
-
-#~ msgid "Go to the SABnzbd Wiki"
-#~ msgstr "Иди на вики САБнзбд-а"
-
-#~ msgid ""
-#~ "                  >>>> WARNING <<<<\\r\\n\\r\\nPlease, first check the "
-#~ "release notes or go to http://wiki.sabnzbd.org/introducing-0-7-0 !"
-#~ msgstr ""
-#~ "                  >>>> ПАЖЊА <<<<\\r\\n\\r\\nПрво проверите белешке о издању "
-#~ "или идите на „http://wiki.sabnzbd.org/introducing-0-7-0“ !"
-
-#~ msgid ""
-#~ "This system requires the Microsoft runtime library VC90 to be installed "
-#~ "first. Do you want to do that now?"
-#~ msgstr ""
-#~ "Овај систем захтева да буде прво инсталирана Мајкрософтова извршна "
-#~ "библиотека „VC90“. Да ли желите то да урадите?"
-
-#~ msgid "Downloading Microsoft runtime installer..."
-#~ msgstr "Преузимам Мајкрософтов извршни програм за инсталацију..."
-
-#~ msgid "Cannot install without runtime library, retry?"
-#~ msgstr "Не могу да инсталирам без извршне библиотеке, да поновим?"
