--- a/po/email/SABemail.pot
+++ b/po/email/SABemail.pot
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.0.0-develop\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: shypike@sabnzbd.org\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: team@sabnzbd.org\n"
+"Language-Team: SABnzbd <team@sabnzbd.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ASCII\n"
-"Content-Transfer-Encoding: 7bit\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 #: email/email.tmpl:1
 msgid ""
 "##\n"
