--- a/po/main/fr.po
+++ b/po/main/fr.po
@@ -3,14 +3,14 @@
 #   team@sabnzbd.org
 # 
 # Translators:
-# Safihre SABnzbd <safihre@sabnzbd.org>, 2020
+# Safihre <safihre@sabnzbd.org>, 2020
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.0.0-develop\n"
 "POT-Creation-Date: 2020-06-26 09:41+0000\n"
 "PO-Revision-Date: 2020-06-27 15:49+0000\n"
-"Last-Translator: Safihre SABnzbd <safihre@sabnzbd.org>, 2020\n"
+"Last-Translator: Safihre <safihre@sabnzbd.org>, 2020\n"
 "Language-Team: French (https://www.transifex.com/sabnzbd/teams/111101/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1118,7 +1118,7 @@ msgstr "Mise en pause du doublon NZB \"%s\""
 
 #: sabnzbd/nzbstuff.py [Warning message]
 msgid "Unwanted Extension in file %s (%s)"
-msgstr ""
+msgstr "Extension non souhaitée dans le fichier %s (%s)"
 
 #: sabnzbd/nzbstuff.py
 msgid "Aborted, cannot be completed"
